Fix image distortion issues in product prominent image and job standard cards

--- a/static/scss/answers/cards/job-standard.scss
+++ b/static/scss/answers/cards/job-standard.scss
@@ -27,6 +27,7 @@
   &-imgWrapper
   {
     display: flex;
+    align-items: flex-start;
     width: 6.25rem;
     margin-right: 1rem;
   }
