--- a/static/scss/answers/cards/product-prominentimage.scss
+++ b/static/scss/answers/cards/product-prominentimage.scss
@@ -23,6 +23,7 @@
   &-imgWrapper
   {
     display: flex;
+    align-items: flex-start;
     width: 100%;
     flex-shrink: 0;
   }
